tests/tests/errors/2006-39.vb
'#compiler-options:/linkres:
'#compiler-message:Command line error BC2006 : option 'linkres' requires ':<resinfo>'
'#exit-code:1